--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -33,6 +33,7 @@
           <a href="/categorias/" class="hover:text-green-100 transition">Categorias</a>
           <a href="/movimentacao/" class="hover:text-green-100 transition">Movimentação</a>
           <a href="/admin" class="hover:text-red-200 font-bold transition">Dashboard</a>
+          <a href="/" class="hover:text-red-200 font-bold transition">Sair</a>
         </nav>
       </div>
 
