--- a/views/landing/index.ejs
+++ b/views/landing/index.ejs
@@ -29,7 +29,7 @@
 
 <body class="bg-gray-50 text-gray-800 leading-relaxed">
 
-<header class="fixed top-0 w-full bg-white/95 backdrop-blur-sm shadow-md z-50 transition-all duration-300">
+<header class="fixed top-0 w-full bg-white/95 backdrop-blur-sm shadow-md z-40 transition-all duration-300">
   <div class="container mx-auto flex justify-between items-center px-6 py-4">
 
     <a href="/" class="flex items-center gap-2 text-2xl font-bold text-primary">
@@ -81,7 +81,7 @@
   </nav>
 </header>
 
-  <section id="inicio" class="bg-[linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.6)),url('https://wallpapers.com/images/featured/cavalo-correndo-yb42lz5ezrmoh668.jpg')] bg-center bg-cover bg-no-repeat h-screen flex items-center justify-center text-center text-white">
+  <section id="inicio" class="bg-[linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.6)),url('https://wallpapers.com/images/featured/cavalo-correndo-yb42lz5ezrmoh668.jpg')] bg-center bg-cover bg-no-repeat h-screen flex items-center justify-center text-center text-white mt-20">
     <div class="container mx-auto px-6">
       <h1 class="text-5xl md:text-6xl font-bold mb-4 leading-tight">
         Força e Performance <br> para <span class="text-green-400">Campeões</span>
